--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -19,12 +19,12 @@ jobs:
           filename: github-metrics.svg
           config_timezone: Europe/Brussels
           base: base_indepth, header, activity, community, repositories, metadata
-          plugin_isocalendar: yes
+          plugin_isocalendar: no
           plugin_languages: yes
           plugin_habits: yes
           plugin_habits_facts: yes
-          plugin_habits_charts: yes
-          repositories_forks: yes
-          plugin_followup: yes
-          plugin_gists: yes
-          plugin_lines: yes
+          plugin_habits_charts: no
+          repositories_forks: no
+          plugin_followup: no
+          plugin_gists: no
+          plugin_lines: no
