--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -11,31 +11,34 @@ jobs:
     runs-on: ubuntu-latest
     if: "github.repository == 'elfensky/elfensky'" #this isn't really neccesary, but needs testing.
     steps:
-      - name: Github Metrics
+      - name: "metrics: base"
         if: ${{ success() || failure() }}
-        uses: elfensky/metrics@latest
+        # uses: elfensky/metrics@latest
+        uses: lowlighter/metrics@latest
         with:
           token: ${{ secrets.METRICS_TOKEN }}
           filename: metrics.base.svg
           config_timezone: Europe/Brussels
-          base: base_indepth, header, activity, community, repositories, metadata
+          base: header, activity, community, repositories, metadata
+          base_indepth: yes
           plugin_isocalendar: no
-          repositories_forks: no
-          plugin_followup: no
-          plugin_gists: no
-          plugin_lines: no
-      - name: github
+
+      - name: "metrics: github"
         if: ${{ success() || failure() }}
-        uses: elfensky/metrics@latest
+        uses: lowlighter/metrics@latest
         with:
           token: ${{ secrets.METRICS_TOKEN }}
           filename: metrics.plugin.github.svg
           config_timezone: Europe/Brussels
           base: ""
+          repositories_forks: no
           plugin_languages: yes
-      - name: habits
+          plugin_followup: no
+          plugin_gists: no
+          plugin_lines: no
+      - name: "metrics: habits"
         if: ${{ success() || failure() }}
-        uses: elfensky/metrics@latest
+        uses: lowlighter/metrics@latest
         with:
           token: ${{ secrets.METRICS_TOKEN }}
           filename: metrics.plugin.habits.svg
@@ -47,20 +50,60 @@ jobs:
           plugin_habits_from: 512
           plugin_habits_charts_type: graph
           plugin_habits_trim: no
-      - name: pagespeed
+      - name: "metrics: pagespeed"
         if: ${{ success() || failure() }}
-        uses: elfensky/metrics@latest
+        uses: lowlighter/metrics@latest
         with:
           token: NOT_NEEDED
           filename: metrics.plugin.pagespeed.svg
           base: ""
+          base_skip: yes
           plugin_pagespeed: yes
-          plugin_pagespeed_detailed: yes
-          plugin_pagespeed_screenshot: yes
-          plugin_pagespeed_pwa: no
           plugin_pagespeed_token: ${{ secrets.PAGESPEED_TOKEN }}
+          plugin_pagespeed_detailed: yes
+          plugin_pagespeed_screenshot: no
+          plugin_pagespeed_pwa: no
           plugin_pagespeed_url: https://lavrenov.io
-      # - name: steam
+      - name: "metrics: achievements"
+        if: ${{ success() || failure() }}
+        uses: lowlighter/metrics@latest
+        with:
+          token: ${{ secrets.METRICS_TOKEN }}
+          filename: metrics.plugin.achievements.svg
+          base: ""
+          plugin_achievements: yes
+      - name: "metrics: calendar (current)"
+        if: ${{ success() || failure() }}
+        uses: lowlighter/metrics@latest
+        with:
+          token: ${{ secrets.METRICS_TOKEN }}
+          filename: metrics.plugin.calendar.current.svg
+          base: ""
+          plugin_calendar: yes
+          plugin_calendar_limit: 0
+      - name: "metrics: calendar (full)"
+        if: ${{ success() || failure() }}
+        uses: lowlighter/metrics@latest
+        with:
+          token: ${{ secrets.METRICS_TOKEN }}
+          filename: metrics.plugin.achievements.full.svg
+          base: ""
+          plugin_calendar: yes
+          plugin_calendar_limit: 0
+      - name: "metrics: wakapi"
+        if: ${{ success() || failure() }}
+        uses: lowlighter/metrics@latest
+        with:
+          filename: metrics.plugin.wakatime.svg
+          token: NOT_NEEDED
+          base: ""
+          base_skip: yes
+          plugin_wakatime: yes
+          plugin_wakatime_token: ${{ secrets.WAKATIME_TOKEN }}
+          plugin_wakatime_url: wakapi.lavrenov.io
+          plugin_wakatime_sections: time, projects, projects-graphs, languages, languages-graphs, editors, os
+          plugin_wakatime_days: 365
+      # - name: "metrics: steam"
       #   if: ${{ success() || failure() }}
       #   uses: elfensky/metrics@latest
       #   with:
