--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -100,7 +100,7 @@ jobs:
           base_skip: yes
           plugin_wakatime: yes
           plugin_wakatime_token: ${{ secrets.WAKATIME_TOKEN }}
-          plugin_wakatime_url: wakapi.lavrenov.io
+          plugin_wakatime_url: https://wakapi.lavrenov.io
           plugin_wakatime_sections: time, projects, projects-graphs, languages, languages-graphs, editors, os
           plugin_wakatime_days: 365
       # - name: "metrics: steam"
