--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -5,7 +5,7 @@ on:
   # (optional) Run workflow manually
   workflow_dispatch:
   # (optional) Run workflow when pushing on master/main
-  push: {branches: ["main"]} # remove "master" from array
+  # push: {branches: ["main"]} # remove "master" from array
 jobs:
   github-metrics:
     runs-on: ubuntu-latest
@@ -13,7 +13,6 @@ jobs:
     steps:
       - name: "metrics: base"
         if: ${{ success() || failure() }}
-        # uses: elfensky/metrics@latest
         uses: lowlighter/metrics@latest
         with:
           token: ${{ secrets.METRICS_TOKEN }}
@@ -21,8 +20,7 @@ jobs:
           config_timezone: Europe/Brussels
           base: header, activity, community, repositories, metadata
           base_indepth: yes
-          plugin_isocalendar: no
-
+          
       - name: "metrics: github"
         if: ${{ success() || failure() }}
         uses: lowlighter/metrics@latest
@@ -36,6 +34,7 @@ jobs:
           plugin_followup: no
           plugin_gists: no
           plugin_lines: no
+          
       - name: "metrics: habits"
         if: ${{ success() || failure() }}
         uses: lowlighter/metrics@latest
@@ -50,20 +49,22 @@ jobs:
           plugin_habits_from: 512
           plugin_habits_charts_type: graph
           plugin_habits_trim: no
-      - name: "metrics: pagespeed"
-        if: ${{ success() || failure() }}
-        uses: lowlighter/metrics@latest
-        with:
-          token: NOT_NEEDED
-          filename: metrics.plugin.pagespeed.svg
-          base: ""
-          base_skip: yes
-          plugin_pagespeed: yes
-          plugin_pagespeed_token: ${{ secrets.PAGESPEED_TOKEN }}
-          plugin_pagespeed_detailed: yes
-          plugin_pagespeed_screenshot: no
-          plugin_pagespeed_pwa: no
-          plugin_pagespeed_url: https://lavrenov.io
+          
+      # - name: "metrics: pagespeed"
+      #   if: ${{ success() || failure() }}
+      #   uses: lowlighter/metrics@latest
+      #   with:
+      #     token: NOT_NEEDED
+      #     filename: metrics.plugin.pagespeed.svg
+      #     base: ""
+      #     base_skip: yes
+      #     plugin_pagespeed: yes
+      #     plugin_pagespeed_token: ${{ secrets.PAGESPEED_TOKEN }}
+      #     plugin_pagespeed_detailed: yes
+      #     plugin_pagespeed_screenshot: no
+      #     plugin_pagespeed_pwa: no
+      #     plugin_pagespeed_url: https://lavrenov.io
+          
       - name: "metrics: achievements"
         if: ${{ success() || failure() }}
         uses: lowlighter/metrics@latest
@@ -72,6 +73,7 @@ jobs:
           filename: metrics.plugin.achievements.svg
           base: ""
           plugin_achievements: yes
+          
       - name: "metrics: calendar (current)"
         if: ${{ success() || failure() }}
         uses: lowlighter/metrics@latest
@@ -80,29 +82,31 @@ jobs:
           filename: metrics.plugin.calendar.current.svg
           base: ""
           plugin_calendar: yes
-          plugin_calendar_limit: 0
-      - name: "metrics: calendar (full)"
-        if: ${{ success() || failure() }}
-        uses: lowlighter/metrics@latest
-        with:
-          token: ${{ secrets.METRICS_TOKEN }}
-          filename: metrics.plugin.achievements.full.svg
-          base: ""
-          plugin_calendar: yes
-          plugin_calendar_limit: 0
-      - name: "metrics: wakapi"
-        if: ${{ success() || failure() }}
-        uses: lowlighter/metrics@latest
-        with:
-          filename: metrics.plugin.wakatime.svg
-          token: NOT_NEEDED
-          base: ""
-          base_skip: yes
-          plugin_wakatime: yes
-          plugin_wakatime_token: ${{ secrets.WAKATIME_TOKEN }}
-          plugin_wakatime_url: https://wakapi.lavrenov.io
-          plugin_wakatime_sections: time, projects, projects-graphs, languages, languages-graphs, editors, os
-          plugin_wakatime_days: 365
+          
+      # - name: "metrics: calendar (full)"
+      #   if: ${{ success() || failure() }}
+      #   uses: lowlighter/metrics@latest
+      #   with:
+      #     token: ${{ secrets.METRICS_TOKEN }}
+      #     filename: metrics.plugin.achievements.full.svg
+      #     base: ""
+      #     plugin_calendar: yes
+      #     plugin_calendar_limit: 0
+          
+      # - name: "metrics: wakapi"
+      #   if: ${{ success() || failure() }}
+      #   uses: lowlighter/metrics@latest
+      #   with:
+      #     filename: metrics.plugin.wakatime.svg
+      #     token: NOT_NEEDED
+      #     base: ""
+      #     base_skip: yes
+      #     plugin_wakatime: yes
+      #     plugin_wakatime_token: ${{ secrets.WAKATIME_TOKEN }}
+      #     plugin_wakatime_url: https://wakapi.lavrenov.io
+      #     plugin_wakatime_sections: time, projects, projects-graphs, languages, languages-graphs, editors, os
+      #     plugin_wakatime_days: 365
+      
       # - name: "metrics: steam"
       #   if: ${{ success() || failure() }}
       #   uses: elfensky/metrics@latest
