--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -1,98 +1,114 @@
 name: Metrics
 on:
   # Schedule daily updates
-  schedule: [{cron: "0 0 * * *"}]
+  schedule: [{ cron: '0 0 * * *' }]
   # (optional) Run workflow manually
   workflow_dispatch:
   # (optional) Run workflow when pushing on master/main
-  # push: {branches: ["main"]} # remove "master" from array
+  push: { branches: ['main'] } # remove "master" from array
 jobs:
   github-metrics:
     runs-on: ubuntu-latest
     if: "github.repository == 'elfensky/elfensky'" #this isn't really neccesary, but needs testing.
     steps:
-      - name: "metrics: base"
+      # https://github.com/lowlighter/metrics/blob/master/source/plugins/base/README.md
+      - name: 'metrics: base'
         if: ${{ success() || failure() }}
         uses: lowlighter/metrics@latest
         with:
           token: ${{ secrets.METRICS_TOKEN }}
-          filename: metrics.base.svg
+          filename: metrics.plugin.base.svg
           config_timezone: Europe/Brussels
           base: header, activity, community, repositories, metadata
           base_indepth: yes
-          
-      - name: "metrics: github"
+
+      # https://github.com/lowlighter/metrics/tree/master/source/plugins/languages
+      - name: 'metrics: languages'
         if: ${{ success() || failure() }}
         uses: lowlighter/metrics@latest
         with:
           token: ${{ secrets.METRICS_TOKEN }}
-          filename: metrics.plugin.github.svg
+          filename: metrics.plugin.languages.svg
           config_timezone: Europe/Brussels
-          base: ""
-          repositories_forks: no
+          base: ''
           plugin_languages: yes
-          plugin_followup: no
-          plugin_gists: no
-          plugin_lines: no
-          
-      - name: "metrics: habits"
+          plugin_languages_indepth: yes
+
+      # https://github.com/lowlighter/metrics/tree/master/source/plugins/habits
+      - name: 'metrics: habits'
         if: ${{ success() || failure() }}
         uses: lowlighter/metrics@latest
         with:
           token: ${{ secrets.METRICS_TOKEN }}
           filename: metrics.plugin.habits.svg
           config_timezone: Europe/Brussels
-          base: ""
+          base: ''
           plugin_habits: yes
           plugin_habits_facts: yes
           plugin_habits_charts: yes
           plugin_habits_from: 512
           plugin_habits_charts_type: graph
           plugin_habits_trim: no
-          
-      # - name: "metrics: pagespeed"
-      #   if: ${{ success() || failure() }}
-      #   uses: lowlighter/metrics@latest
-      #   with:
-      #     token: NOT_NEEDED
-      #     filename: metrics.plugin.pagespeed.svg
-      #     base: ""
-      #     base_skip: yes
-      #     plugin_pagespeed: yes
-      #     plugin_pagespeed_token: ${{ secrets.PAGESPEED_TOKEN }}
-      #     plugin_pagespeed_detailed: yes
-      #     plugin_pagespeed_screenshot: no
-      #     plugin_pagespeed_pwa: no
-      #     plugin_pagespeed_url: https://lavrenov.io
-          
-      - name: "metrics: achievements"
+
+      # https://github.com/lowlighter/metrics/tree/master/source/plugins/pagespeed
+      - name: 'metrics: pagespeed'
+        if: ${{ success() || failure() }}
+        uses: lowlighter/metrics@latest
+        with:
+          token: NOT_NEEDED
+          filename: metrics.plugin.pagespeed.svg
+          base: ''
+          base_skip: yes
+          plugin_pagespeed: yes
+          plugin_pagespeed_token: ${{ secrets.PAGESPEED_TOKEN }}
+          plugin_pagespeed_detailed: yes
+          plugin_pagespeed_screenshot: no
+          plugin_pagespeed_pwa: no
+          plugin_pagespeed_url: https://lavrenov.io
+
+      # https://github.com/lowlighter/metrics/tree/master/source/plugins/achievements
+      - name: 'metrics: achievements'
         if: ${{ success() || failure() }}
         uses: lowlighter/metrics@latest
         with:
           token: ${{ secrets.METRICS_TOKEN }}
-          filename: metrics.plugin.achievements.svg
-          base: ""
+          filename: metrics.plugin.achievements.compact.svg
+          base: ''
           plugin_achievements: yes
-          
-      - name: "metrics: calendar (current)"
+          plugin_achievements_display: compact #detailed is default
+
+      # https://github.com/lowlighter/metrics/tree/master/source/plugins/achievements
+      - name: 'metrics: achievements'
+        if: ${{ success() || failure() }}
+        uses: lowlighter/metrics@latest
+        with:
+          token: ${{ secrets.METRICS_TOKEN }}
+          filename: metrics.plugin.achievements.full.svg
+          base: ''
+          plugin_achievements: yes
+
+      # https://github.com/lowlighter/metrics/tree/master/source/plugins/calendar
+      - name: 'metrics: calendar (current)'
         if: ${{ success() || failure() }}
         uses: lowlighter/metrics@latest
         with:
           token: ${{ secrets.METRICS_TOKEN }}
           filename: metrics.plugin.calendar.current.svg
-          base: ""
+          base: ''
           plugin_calendar: yes
-          
+
+      # https://github.com/lowlighter/metrics/tree/master/source/plugins/calendar
       # - name: "metrics: calendar (full)"
       #   if: ${{ success() || failure() }}
       #   uses: lowlighter/metrics@latest
       #   with:
       #     token: ${{ secrets.METRICS_TOKEN }}
-      #     filename: metrics.plugin.achievements.full.svg
+      #     filename: metrics.plugin.calendar.full.svg
       #     base: ""
       #     plugin_calendar: yes
       #     plugin_calendar_limit: 0
-          
+
+      # https://github.com/lowlighter/metrics/tree/master/source/plugins/wakatime
       # - name: "metrics: wakapi"
       #   if: ${{ success() || failure() }}
       #   uses: lowlighter/metrics@latest
@@ -106,7 +122,8 @@ jobs:
       #     plugin_wakatime_url: https://wakapi.lavrenov.io
       #     plugin_wakatime_sections: time, projects, projects-graphs, languages, languages-graphs, editors, os
       #     plugin_wakatime_days: 365
-      
+
+      # https://github.com/lowlighter/metrics/tree/master/source/plugins/steam
       # - name: "metrics: steam"
       #   if: ${{ success() || failure() }}
       #   uses: elfensky/metrics@latest
@@ -117,6 +134,3 @@ jobs:
       #     plugin_steam: yes
       #     plugin_steam_sections: player, most-played. recently-played
       #     plugin_steam_user: 76561198053036362
-          
-          
-          
