--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -5,7 +5,10 @@ on:
   # (optional) Run workflow manually
   workflow_dispatch:
   # (optional) Run workflow when pushing on master/main
-  push: { branches: ['main'] } # remove "master" from array
+  # push: { branches: ['main'] } # remove "master" from array
+  push:
+    paths:
+      - '.github/workflows/metrics.yml'
 jobs:
   github-metrics:
     runs-on: ubuntu-latest
