--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -1,7 +1,7 @@
 name: Generate Metrics
 on:
   schedule: [{ cron: '0 0 * * *' }] # Schedule daily updates
-  workflow_dispatch: # Run workflow manually
+  workflow_dispatch: # allows requesting workflow manually from the website
   # push: { branches: ['main'] } # Run workflow when pushing on master/main
   push:
     paths:
