--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -1,6 +1,9 @@
 name: Generate Metrics
 on:
-  schedule: [{ cron: '0 0 * * *' }] # Schedule daily updates
+  schedule: # [{ cron: '0 0 * * 1' }] # Schedule daily updates
+    - cron: '0 0 * * 1' # Every Monday at 00:00 AM UTC
+    - cron: '0 15 * * 3' # Every Wednesday at 03:00 PM UTC
+    - cron: '0 6 * * 5' # Every Friday at 06:00 AM UTC
   workflow_dispatch: # allows requesting workflow manually from the website
   # push: { branches: ['main'] } # Run workflow when pushing on master/main
   push:
@@ -35,20 +38,36 @@ jobs:
           plugin_languages_indepth: yes
 
       # https://github.com/lowlighter/metrics/tree/master/source/plugins/habits
-      - name: 'metrics: habits'
+      - name: 'metrics: habits (facts)'
         if: ${{ success() || failure() }}
         uses: lowlighter/metrics@latest
         with:
           token: ${{ secrets.METRICS_TOKEN }}
-          filename: metrics.plugin.habits.svg
+          filename: metrics.plugin.habits.facts.svg
           config_timezone: Europe/Brussels
           base: ''
           plugin_habits: yes
           plugin_habits_facts: yes
+          plugin_habits_charts: no
+          plugin_habits_from: 512
+          plugin_habits_charts_type: graph
+          # plugin_habits_trim: no
+
+      # https://github.com/lowlighter/metrics/tree/master/source/plugins/habits
+      - name: 'metrics: habits (charts)'
+        if: ${{ success() || failure() }}
+        uses: lowlighter/metrics@latest
+        with:
+          token: ${{ secrets.METRICS_TOKEN }}
+          filename: metrics.plugin.habits.charts.svg
+          config_timezone: Europe/Brussels
+          base: ''
+          plugin_habits: yes
+          plugin_habits_facts: no
           plugin_habits_charts: yes
           plugin_habits_from: 512
           plugin_habits_charts_type: graph
-          plugin_habits_trim: no
+          # plugin_habits_trim: no
 
       # https://github.com/lowlighter/metrics/tree/master/source/plugins/pagespeed
       - name: 'metrics: pagespeed'
@@ -67,7 +86,7 @@ jobs:
           plugin_pagespeed_url: https://lavrenov.io
 
       # https://github.com/lowlighter/metrics/tree/master/source/plugins/achievements
-      - name: 'metrics: achievements'
+      - name: 'metrics: achievements (compact)'
         if: ${{ success() || failure() }}
         uses: lowlighter/metrics@latest
         with:
@@ -78,7 +97,7 @@ jobs:
           plugin_achievements_display: compact #detailed is default
 
       # https://github.com/lowlighter/metrics/tree/master/source/plugins/achievements
-      - name: 'metrics: achievements'
+      - name: 'metrics: achievements (full)'
         if: ${{ success() || failure() }}
         uses: lowlighter/metrics@latest
         with:
@@ -113,7 +132,7 @@ jobs:
         if: ${{ success() || failure() }}
         uses: lowlighter/metrics@latest
         with:
-          filename: metrics.plugin.wakatime.svg
+          filename: metrics.plugin.wakapi.svg
           token: NOT_NEEDED
           base: ''
           base_skip: yes
