--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -1,4 +1,4 @@
-name: Generate Metrics
+name: Generate All Metrics
 on:
   schedule: # [{ cron: '0 0 * * 1' }] # Schedule daily updates
     - cron: '0 0 * * 1' # Every Monday at 00:00 AM UTC
@@ -50,7 +50,7 @@ jobs:
           plugin_habits_facts: yes
           plugin_habits_charts: no
           plugin_habits_from: 512
-          plugin_habits_charts_type: graph
+          plugin_habits_charts_type: classic
           # plugin_habits_trim: no
 
       # https://github.com/lowlighter/metrics/tree/master/source/plugins/habits
@@ -66,24 +66,24 @@ jobs:
           plugin_habits_facts: no
           plugin_habits_charts: yes
           plugin_habits_from: 512
-          plugin_habits_charts_type: graph
+          plugin_habits_charts_type: classic
           # plugin_habits_trim: no
 
       # https://github.com/lowlighter/metrics/tree/master/source/plugins/pagespeed
-      - name: 'metrics: pagespeed'
-        if: ${{ success() || failure() }}
-        uses: lowlighter/metrics@latest
-        with:
-          token: NOT_NEEDED
-          filename: metrics.plugin.pagespeed.svg
-          base: ''
-          base_skip: yes
-          plugin_pagespeed: yes
-          plugin_pagespeed_token: ${{ secrets.PAGESPEED_TOKEN }}
-          plugin_pagespeed_detailed: yes
-          plugin_pagespeed_screenshot: no
-          plugin_pagespeed_pwa: no
-          plugin_pagespeed_url: https://lavrenov.io
+      # - name: 'metrics: pagespeed'
+      #   if: ${{ success() || failure() }}
+      #   uses: lowlighter/metrics@latest
+      #   with:
+      #     token: NOT_NEEDED
+      #     filename: metrics.plugin.pagespeed.svg
+      #     base: ''
+      #     base_skip: yes
+      #     plugin_pagespeed: yes
+      #     plugin_pagespeed_token: ${{ secrets.PAGESPEED_TOKEN }}
+      #     plugin_pagespeed_detailed: yes
+      #     plugin_pagespeed_screenshot: no
+      #     plugin_pagespeed_pwa: no
+      #     plugin_pagespeed_url: https://lavrenov.io
 
       # https://github.com/lowlighter/metrics/tree/master/source/plugins/achievements
       - name: 'metrics: achievements (compact)'
