--- a/.github/workflows/habits.yml
+++ b/.github/workflows/habits.yml
@@ -37,3 +37,19 @@ jobs:
           plugin_habits_from: 512
           plugin_habits_charts_type: classic
           plugin_habits_trim: yes
+
+      # https://github.com/lowlighter/metrics/tree/master/source/plugins/habits
+      - name: 'metrics: habits (full)'
+        if: ${{ success() || failure() }}
+        uses: lowlighter/metrics@latest
+        with:
+          token: ${{ secrets.METRICS_TOKEN }}
+          filename: metrics.plugin.habits.both.trim.svg
+          config_timezone: Europe/Brussels
+          base: ''
+          plugin_habits: yes
+          plugin_habits_facts: yes
+          plugin_habits_charts: yes
+          plugin_habits_from: 512
+          plugin_habits_charts_type: classic
+          plugin_habits_trim: yes
