--- a/.github/workflows/habits.yml
+++ b/.github/workflows/habits.yml
@@ -7,36 +7,36 @@ jobs:
     if: "github.repository == 'elfensky/elfensky'" #this isn't really neccesary, but needs testing.
     steps:
       # https://github.com/lowlighter/metrics/tree/master/source/plugins/habits
-      - name: 'metrics: habits (facts)'
-        if: ${{ success() || failure() }}
-        uses: lowlighter/metrics@latest
-        with:
-          token: ${{ secrets.METRICS_TOKEN }}
-          filename: metrics.plugin.habits.facts.trim.svg
-          config_timezone: Europe/Brussels
-          base: ''
-          plugin_habits: yes
-          plugin_habits_facts: yes
-          plugin_habits_charts: no
-          plugin_habits_from: 512
-          plugin_habits_charts_type: classic
-          plugin_habits_trim: yes
+      # - name: 'metrics: habits (facts)'
+      #   if: ${{ success() || failure() }}
+      #   uses: lowlighter/metrics@latest
+      #   with:
+      #     token: ${{ secrets.METRICS_TOKEN }}
+      #     filename: metrics.plugin.habits.facts.trim.svg
+      #     config_timezone: Europe/Brussels
+      #     base: ''
+      #     plugin_habits: yes
+      #     plugin_habits_facts: yes
+      #     plugin_habits_charts: no
+      #     plugin_habits_from: 512
+      #     plugin_habits_charts_type: classic
+      #     plugin_habits_trim: yes
 
       # https://github.com/lowlighter/metrics/tree/master/source/plugins/habits
-      - name: 'metrics: habits (charts)'
-        if: ${{ success() || failure() }}
-        uses: lowlighter/metrics@latest
-        with:
-          token: ${{ secrets.METRICS_TOKEN }}
-          filename: metrics.plugin.habits.charts.trim.svg
-          config_timezone: Europe/Brussels
-          base: ''
-          plugin_habits: yes
-          plugin_habits_facts: no
-          plugin_habits_charts: yes
-          plugin_habits_from: 512
-          plugin_habits_charts_type: classic
-          plugin_habits_trim: yes
+      # - name: 'metrics: habits (charts)'
+      #   if: ${{ success() || failure() }}
+      #   uses: lowlighter/metrics@latest
+      #   with:
+      #     token: ${{ secrets.METRICS_TOKEN }}
+      #     filename: metrics.plugin.habits.charts.trim.svg
+      #     config_timezone: Europe/Brussels
+      #     base: ''
+      #     plugin_habits: yes
+      #     plugin_habits_facts: no
+      #     plugin_habits_charts: yes
+      #     plugin_habits_from: 512
+      #     plugin_habits_charts_type: classic
+      #     plugin_habits_trim: yes
 
       # https://github.com/lowlighter/metrics/tree/master/source/plugins/habits
       - name: 'metrics: habits (full)'
@@ -44,7 +44,7 @@ jobs:
         uses: lowlighter/metrics@latest
         with:
           token: ${{ secrets.METRICS_TOKEN }}
-          filename: metrics.plugin.habits.both.trim.svg
+          filename: svg/metrics.plugin.habits.trim.svg
           config_timezone: Europe/Brussels
           base: ''
           plugin_habits: yes
