--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -12,7 +12,6 @@ on:
 jobs:
   generate-metrics:
     runs-on: ubuntu-latest
-    if: "github.repository == 'elfensky/elfensky'" #this isn't really neccesary, but needs testing.
     steps:
       # https://github.com/lowlighter/metrics/blob/master/source/plugins/base/README.md
       - name: 'metrics: base'
@@ -43,89 +42,35 @@ jobs:
         uses: lowlighter/metrics@latest
         with:
           token: ${{ secrets.METRICS_TOKEN }}
-          filename: metrics.plugin.habits.facts.svg
+          filename: metrics.plugin.habits.svg
           config_timezone: Europe/Brussels
           base: ''
           plugin_habits: yes
           plugin_habits_facts: yes
-          plugin_habits_charts: no
-          plugin_habits_from: 512
-          plugin_habits_charts_type: classic
-          # plugin_habits_trim: no
-
-      # https://github.com/lowlighter/metrics/tree/master/source/plugins/habits
-      - name: 'metrics: habits (charts)'
-        if: ${{ success() || failure() }}
-        uses: lowlighter/metrics@latest
-        with:
-          token: ${{ secrets.METRICS_TOKEN }}
-          filename: metrics.plugin.habits.charts.svg
-          config_timezone: Europe/Brussels
-          base: ''
-          plugin_habits: yes
-          plugin_habits_facts: no
           plugin_habits_charts: yes
           plugin_habits_from: 512
           plugin_habits_charts_type: classic
-          # plugin_habits_trim: no
-
-      # https://github.com/lowlighter/metrics/tree/master/source/plugins/pagespeed
-      # - name: 'metrics: pagespeed'
-      #   if: ${{ success() || failure() }}
-      #   uses: lowlighter/metrics@latest
-      #   with:
-      #     token: NOT_NEEDED
-      #     filename: metrics.plugin.pagespeed.svg
-      #     base: ''
-      #     base_skip: yes
-      #     plugin_pagespeed: yes
-      #     plugin_pagespeed_token: ${{ secrets.PAGESPEED_TOKEN }}
-      #     plugin_pagespeed_detailed: yes
-      #     plugin_pagespeed_screenshot: no
-      #     plugin_pagespeed_pwa: no
-      #     plugin_pagespeed_url: https://lavrenov.io
+          plugin_habits_trim: no
 
       # https://github.com/lowlighter/metrics/tree/master/source/plugins/achievements
-      - name: 'metrics: achievements (compact)'
+      - name: 'metrics: achievements'
         if: ${{ success() || failure() }}
         uses: lowlighter/metrics@latest
         with:
           token: ${{ secrets.METRICS_TOKEN }}
-          filename: metrics.plugin.achievements.compact.svg
-          base: ''
-          plugin_achievements: yes
-          plugin_achievements_display: compact #detailed is default
-
-      # https://github.com/lowlighter/metrics/tree/master/source/plugins/achievements
-      - name: 'metrics: achievements (full)'
-        if: ${{ success() || failure() }}
-        uses: lowlighter/metrics@latest
-        with:
-          token: ${{ secrets.METRICS_TOKEN }}
-          filename: metrics.plugin.achievements.full.svg
+          filename: metrics.plugin.achievements.svg
           base: ''
           plugin_achievements: yes
 
       # https://github.com/lowlighter/metrics/tree/master/source/plugins/calendar
-      - name: 'metrics: calendar (current)'
+      - name: 'metrics: calendar'
         if: ${{ success() || failure() }}
         uses: lowlighter/metrics@latest
         with:
           token: ${{ secrets.METRICS_TOKEN }}
-          filename: metrics.plugin.calendar.current.svg
+          filename: metrics.plugin.calendar.svg
           base: ''
           plugin_calendar: yes
-
-      # https://github.com/lowlighter/metrics/tree/master/source/plugins/calendar
-      # - name: "metrics: calendar (full)"
-      #   if: ${{ success() || failure() }}
-      #   uses: lowlighter/metrics@latest
-      #   with:
-      #     token: ${{ secrets.METRICS_TOKEN }}
-      #     filename: metrics.plugin.calendar.full.svg
-      #     base: ""
-      #     plugin_calendar: yes
-      #     plugin_calendar_limit: 0
 
       # https://github.com/lowlighter/metrics/tree/master/source/plugins/wakatime
       - name: 'metrics: wakapi'
@@ -141,15 +86,3 @@ jobs:
           plugin_wakatime_url: https://wakapi.lavrenov.io
           plugin_wakatime_sections: time, projects, projects-graphs, languages, languages-graphs, editors, os
           plugin_wakatime_days: 365
-
-      # https://github.com/lowlighter/metrics/tree/master/source/plugins/steam
-      # - name: "metrics: steam"
-      #   if: ${{ success() || failure() }}
-      #   uses: elfensky/metrics@latest
-      #   with:
-      #     token: NOT_NEEDED
-      #     filename: metrics.plugin.steam.svg
-      #     base: ""
-      #     plugin_steam: yes
-      #     plugin_steam_sections: player, most-played. recently-played
-      #     plugin_steam_user: 76561198053036362
