--- a/.github/workflows/pagespeed.yml
+++ b/.github/workflows/pagespeed.yml
@@ -6,15 +6,13 @@ on:
 jobs:
   generate-metrics:
     runs-on: ubuntu-latest
-    if: "github.repository == 'elfensky/elfensky'" #this isn't really neccesary, but needs testing.
     steps:
       # https://github.com/lowlighter/metrics/tree/master/source/plugins/pagespeed
       - name: 'metrics: pagespeed'
-        if: ${{ success() || failure() }}
         uses: lowlighter/metrics@latest
         with:
           token: NOT_NEEDED
-          filename: metrics.plugin.pagespeed.portfolio.svg
+          filename: metrics.plugin.pagespeed.svg
           base: ''
           base_skip: yes
           plugin_pagespeed: yes
