--- a/.github/workflows/achievements.yml
+++ b/.github/workflows/achievements.yml
@@ -22,7 +22,7 @@ jobs:
         uses: lowlighter/metrics@latest
         with:
           token: ${{ secrets.METRICS_TOKEN }}
-          filename: metrics.plugin.achievements.full.svg
+          filename: metrics.plugin.achievements.svg
           base: ''
           plugin_achievements: yes
           plugin_achievements_display: detailed
