--- a/.github/workflows/scheduled.pagespeed.yml
+++ b/.github/workflows/scheduled.pagespeed.yml
@@ -1,7 +1,10 @@
 name: Automate Pagespeed
 on:
   schedule:
-    - cron: '0 0 * * *' # Every Day at 00:00 AM UTC
+    # - cron: '0 0 * * *' # Every Day at 00:00 AM UTC
+    - cron: '0 0 * * 1' # Every Monday at 00:00 AM UTC
+    # - cron: '0 15 * * 3' # Every Wednesday at 03:00 PM UTC
+    - cron: '0 6 * * 5' # Every Friday at 06:00 AM UTC
   workflow_dispatch: # allows requesting workflow manually from the website
 jobs:
   generate-metrics:
