--- a/.github/workflows/manual.habits.yml
+++ b/.github/workflows/manual.habits.yml
@@ -2,7 +2,7 @@ name: Generate Habits
 on:
   workflow_dispatch: # allows requesting workflow manually from the website
 jobs:
-  generate-metrics:
+  generate-habits:
     runs-on: ubuntu-latest
     steps:
       # https://github.com/lowlighter/metrics/tree/master/source/plugins/habits
